@@ -37,13 +37,15 @@ typedef struct tfb_videoclip
 	RECT dst_rect;     // destination screen rect
 	RECT src_rect;     // source rect
 	MUSIC_REF hAudio;
-	MUSIC_REF hAudio2;
 	Task play_task;
 	uint32 frame_time; // time when next frame should be rendered
 	TFB_Image* frame;  // frame preped and optimized for rendering
 	uint32 cur_frame;  // index of frame currently displayed
 	uint32 max_frame_wait;
 	bool playing;
+	bool own_audio;
+	uint32 loop_frame; // frame index to loop from
+	uint32 loop_to;    // frame index to loop to
 
 	Mutex guard;
 	uint32 want_frame; // audio-signaled desired frame index
